--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Run tests with coverage (Windos and Linux only)
         if: ${{ runner.os != 'macOS' }}
         run: |
-          cargo llvm-cov --all-features --workspace --codecov --output-path codecov.json
+          cargo llvm-cov --all-features --workspace --doctests --codecov --output-path codecov.json
 
       - name: Upload coverage to Codecov (Windows and Linux only)
         if: ${{ runner.os != 'macOS' }}
